utoipa-gen/tests/snapshots/schema_derive_test__derive_externally_tagged_enum_with_no_additional_properties.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "Empty": {
          "additionalProperties": false,
          "type": "object"
        }
      },
      "required": [
        "Empty"
      ],
      "type": "object"
    },
    {
      "properties": {
        "Field": {
          "additionalProperties": false,
          "properties": {
            "field": {
              "type": "string"
            }
          },
          "required": [
            "field"
          ],
          "type": "object"
        }
      },
      "required": [
        "Field"
      ],
      "type": "object"
    }
  ]
}
