utoipa-gen/tests/snapshots/schema_derive_test__derive_flattened_map_ref_property.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: map
snapshot_kind: text
---
{
  "additionalProperties": {
    "$ref": "#/components/schemas/Foo"
  },
  "type": "object"
}
