utoipa-gen/tests/snapshots/schema_derive_test__derive_internally_tagged_enum_with_no_additional_properties.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "additionalProperties": false,
      "properties": {
        "kind": {
          "enum": [
            "Empty"
          ],
          "type": "string"
        }
      },
      "required": [
        "kind"
      ],
      "type": "object"
    },
    {
      "additionalProperties": false,
      "properties": {
        "field": {
          "type": "string"
        },
        "kind": {
          "enum": [
            "Field"
          ],
          "type": "string"
        }
      },
      "required": [
        "field",
        "kind"
      ],
      "type": "object"
    }
  ]
}
