utoipa-gen/tests/snapshots/schema_derive_test__derive_map_free_form_property.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: map
snapshot_kind: text
---
{
  "properties": {
    "map": {
      "additionalProperties": true,
      "type": "object"
    }
  },
  "required": [
    "map"
  ],
  "type": "object"
}
