utoipa-gen/tests/snapshots/schema_derive_test__derive_map_with_property_names.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "additionalProperties": {
    "type": "string"
  },
  "propertyNames": {
    "enum": [
      "Foo",
      "Bar"
    ],
    "type": "string"
  },
  "type": "object"
}
