utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_as.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: "&value"
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "Foo": {
          "properties": {
            "foo": {
              "$ref": "#/components/schemas/Foobar"
            }
          },
          "required": [
            "foo"
          ],
          "type": "object"
        }
      },
      "required": [
        "Foo"
      ],
      "type": "object"
    }
  ]
}
