utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_custom_rename.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "NEWPOST": {
          "type": "string"
        }
      },
      "required": [
        "NEWPOST"
      ],
      "type": "object"
    },
    {
      "properties": {
        "update_post": {
          "properties": {
            "CreatedAt": {
              "format": "int64",
              "type": "integer"
            },
            "PostId": {
              "format": "int64",
              "type": "integer"
            },
            "post_comment": {
              "type": "string"
            }
          },
          "required": [
            "PostId",
            "CreatedAt",
            "post_comment"
          ],
          "type": "object"
        }
      },
      "required": [
        "update_post"
      ],
      "type": "object"
    },
    {
      "properties": {
        "RANDOMVALUE": {
          "properties": {
            "id": {
              "format": "int64",
              "type": "integer"
            }
          },
          "required": [
            "id"
          ],
          "type": "object"
        }
      },
      "required": [
        "RANDOMVALUE"
      ],
      "type": "object"
    }
  ]
}
